<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/veuillez_choisir_l_unit_de_mesure"
        android:textSize="10pt" />

    <Button
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/celsius" />

    <Button
        android:id="@+id/fh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit" />

    <Button
        android:id="@+id/kl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kelvin" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image"
        android:contentDescription="@string/temperateur_image" />



</LinearLayout>