<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputValue"
        android:hint="@string/entrez_une_valeur"
        android:gravity="center"
        android:inputType="number"
        android:textSize="50px"
        android:autofillHints="yes" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/convertire"
        android:id="@+id/conBtn"
        android:onClick="convert"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temp_rateur_en_celsius"
        android:gravity="center"
        android:textSize="50px" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="resultat"
        android:gravity="center"
        android:textSize="50px"
        android:id="@+id/CelsiusValue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Températeur en Fahrenheit"
        android:gravity="center"
        android:textSize="50px" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="resultat"
        android:gravity="center"
        android:textSize="50px"
        android:id="@+id/FahrenheitValue"
        android:autofillHints="yes" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image"
        android:contentDescription="températeur" />


</LinearLayout>